--- a/package.json
+++ b/package.json
@@ -16,5 +16,20 @@
   "bugs": {
     "url": "https://github.com/henrychoi7/CalendarLog-Server/issues"
   },
-  "homepage": "https://github.com/henrychoi7/CalendarLog-Server#readme"
+  "homepage": "https://github.com/henrychoi7/CalendarLog-Server#readme",
+  "devDependencies": {
+    "@types/express": "^4.11.1",
+    "nodemon": "^1.17.3",
+    "npm-run-all": "^4.1.2",
+    "ts-loader": "^4.2.0",
+    "typescript": "^2.8.1",
+    "webpack": "^4.5.0"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "hbs": "^4.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "source-map-support": "^0.5.4",
+    "typescript-eslint-parser": "^15.0.0"
+  }
 }
