--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "webpack": "^4.5.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "mysql": "^2.15.0",
     "source-map-support": "^0.5.4",
     "typescript-eslint-parser": "^15.0.0"
   }
