--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "webpack": "^4.5.0"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jsonwebtoken": "^8.2.1",
     "mysql": "^2.15.0",
+    "regex-email": "^1.0.2",
     "source-map-support": "^0.5.4",
     "typescript-eslint-parser": "^15.0.0"
   }
