--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.2.1",
     "mysql": "^2.15.0",
+    "promise-mysql": "^3.3.1",
     "regex-email": "^1.0.2",
     "source-map-support": "^0.5.4",
-    "typescript-eslint-parser": "^15.0.0"
+    "typescript-eslint-parser": "^16.0.1"
   }
 }
