--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "promise-mysql": "^3.3.1",
     "regex-email": "^1.0.2",
     "source-map-support": "^0.5.4",
+    "tsc": "^1.20150623.0",
     "typescript-eslint-parser": "^16.0.1"
   }
 }
